# rust-kernel

./: .gitignore  Cargo.toml  LICENSE  Makefile  link.ld
.cargo/: config
init/: Cargo.toml
init/src/: boot_cores.S  lib.rs
macro_tests/: Cargo.toml
macro_tests/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: gpio.rs  io.rs  mailbox.rs  main.rs  panic_handler.rs  power.rs  random.rs  self_update.S  self_update.rs  timer.rs  uart0.rs  uart1.rs
src/display/: frame_buffer.rs
src/io/: macros.rs  uart.rs
src/peripherals/: gpio.rs  mailbox.rs  mod.rs  power.rs  random.rs  timer.rs  uart0.rs
utils/: Cargo.toml
utils/src/: lib.rs  sync.rs
